objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Default Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Lead Sale Lost</fullName>
        </values>
        <values>
            <fullName>MRA - NFA %28No Further Action%29</fullName>
        </values>
        <values>
            <fullName>Member Rejected</fullName>
        </values>
        <values>
            <fullName>No Further Action</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FSC Lead Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>No Further Action</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AmountFinanced__c</fullName>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>App ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessLineOfCredit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Line of Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessOnlineBanking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Online Banking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BusinessRemoteDepositCapture__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Remote Deposit Capture</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links Campaign to Lead</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CertificateOfDeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate of Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialRealEstateLoan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commercial Real Estate Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditCardProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Card Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditScoreDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Credit Score Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DTI</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateClosed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateFunded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dealer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectDepositServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Deposit Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExistingMember__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancialInstitution__c</fullName>
        <label>Financial Institution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Bank of Commerce</fullName>
                </value>
                <value>
                    <fullName>Bank of Idaho</fullName>
                </value>
                <value>
                    <fullName>Bank of the Cascades</fullName>
                </value>
                <value>
                    <fullName>Capital Educators FCU</fullName>
                </value>
                <value>
                    <fullName>Citizens Community</fullName>
                </value>
                <value>
                    <fullName>DL Evans</fullName>
                </value>
                <value>
                    <fullName>Farmers Bank</fullName>
                </value>
                <value>
                    <fullName>First Federal</fullName>
                </value>
                <value>
                    <fullName>ISU Credit Union</fullName>
                </value>
                <value>
                    <fullName>JP Morgan Chase</fullName>
                </value>
                <value>
                    <fullName>Key Bank</fullName>
                </value>
                <value>
                    <fullName>Magic Valley/Columbia Bank</fullName>
                </value>
                <value>
                    <fullName>Mountain America Credit Union</fullName>
                </value>
                <value>
                    <fullName>Pioneer Federal CU</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Washington Trust</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Zions</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FirstPaymentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GAP__c</fullName>
        <label>GAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HomePhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IdentificationExpirationDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationIssueDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IdentificationIssueState__c</fullName>
        <label>Identification Issue State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IdentificationNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdentificationType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Identification Type</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JointBusinessPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>JointCreditScore__c</fullName>
        <label>Joint Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JointEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>JointFirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint First Name</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JointLastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Last Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JointMiddleName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Middle</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JointPhone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Joint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint</label>
        <length>104</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <label>LTV</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadAssignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Assignment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>FSC User</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanOfficer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Loan Officer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRABatchDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Indicates the date an MRA lead was marked for follow-up.  Some leads may be revisited years after their initial creation.  This date is used to identify a fresh lead.</inlineHelpText>
        <label>MRA Batch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mailing Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MajorAccountCode__c</fullName>
        <description>Avoka Transact Manager account opening major type code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Major Account Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Make</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Member Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MinorAccountCode__c</fullName>
        <description>Avoka Transact Manager account opening major type code.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Minor Account Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MinorAccountType__c</fullName>
        <label>Minor Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Branch New Auto</fullName>
                </value>
                <value>
                    <fullName>Branch RV</fullName>
                </value>
                <value>
                    <fullName>Branch Used Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect New Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect Used Auto</fullName>
                </value>
                <value>
                    <fullName>Indirect RV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NameOfPersonYouAreSpeakingWith__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of person you are speaking with</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherFinancialInstitution__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Financial Institution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaychexPayrollServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paychex/Payroll Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PayoffSource__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payoff Source</label>
        <length>104</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Person Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Preferred Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryBorrow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Borrow</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductAmount__c</fullName>
        <label>Product Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductLead__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Visa</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Motorcycle</fullName>
                </value>
                <value>
                    <fullName>Mortgage</fullName>
                </value>
                <value>
                    <fullName>PLOC</fullName>
                </value>
                <value>
                    <fullName>RV</fullName>
                </value>
                <value>
                    <fullName>Secured</fullName>
                </value>
                <value>
                    <fullName>Signature Loan</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyValue__c</fullName>
        <label>Property Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QualityFactor__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Quality Factor</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferTo__c</fullName>
        <label>Refer To:</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Relationship</fullName>
                </value>
                <value>
                    <fullName>Business Lending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReferralType__c</fullName>
        <inlineHelpText>Identifies who initiated the referral. Use cross sell for any service that the MCC agent recommends to the customer. Use member request for all member initiated product discussions.</inlineHelpText>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Member Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferringTeamMember__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Referring Team Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Savings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Savings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SecondaryOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SpeakingWithPrimaryMember__c</fullName>
        <label>Are you speaking with the primar member?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <externalId>true</externalId>
        <label>Tax ID</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TermLoan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Term Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Term</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisaCreditCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visa Credit Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebToLeadComments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Web to Lead Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X18DigitLeadID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YearsInBusiness__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Years in Business</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllMCCReferrals</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>LEAD.STATUS</columns>
        <columns>ExistingMember__c</columns>
        <columns>LeadAssignment__c</columns>
        <columns>LoanOfficer__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.COMPANY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.MCC_Referral</value>
        </filters>
        <filters>
            <field>ReferringTeamMember__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All MCC Referrals</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>All_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>ExistingMember__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LoanOfficer__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReferralType__c</field>
            <operation>equals</operation>
        </filters>
        <label>All Leads</label>
    </listViews>
    <listViews>
        <fullName>Business_Account_Specialist_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Business Account Specialist</label>
        <queue>Business_Account_Specialist</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Business_Information_Request_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>Business Information Request Queue</label>
        <queue>Business_Information_Request</queue>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>FSC_Lead_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LoanOfficer__c</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Queue</filterScope>
        <label>FSC Unassigned Lead</label>
        <queue>FSC_Lead_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IL_Onboarding</fullName>
        <columns>FULL_NAME</columns>
        <columns>CreditScore__c</columns>
        <columns>JointCreditScore__c</columns>
        <columns>AppID__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LTV__c</columns>
        <columns>GAP__c</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>Campaign_Name__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>MRA - NFA (No Further Action)</value>
        </filters>
        <filters>
            <field>Campaign_Name__c</field>
            <operation>contains</operation>
            <value>onboarding</value>
        </filters>
        <filters>
            <field>LEAD.LAST_UPDATE</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2019 12:00 AM</value>
        </filters>
        <label>IL Onboarding</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>JWadd</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>jwadd</value>
        </filters>
        <label>Business Info Request Leads</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>MRAHomeLoan</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>CreditScore__c</columns>
        <columns>DateFunded__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>AppID__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>Torres,Frazier,Schiffman,Jones,Pieper,Arias,Meade,Archibald,Ibarra,Murphy,Long</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>MRA - NFA (No Further Action)</value>
        </filters>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Home Loan Report</value>
        </filters>
        <label>MRA-Home Loan</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Contacted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Contacted</value>
        </filters>
        <label>My Contacted Leads</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Open_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>My Open Leads</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>OnBoarding</fullName>
        <columns>FULL_NAME</columns>
        <columns>AppID__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>CreditScore__c</columns>
        <columns>MRABatchDate__c</columns>
        <columns>DateFunded__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.LEAD_SOURCE</field>
            <operation>contains</operation>
            <value>IL Onboarding</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>MRA - NFA (No Further Action)</value>
        </filters>
        <label>OnBoarding</label>
        <sharedTo/>
    </listViews>
</CustomObject>